apps/litomi/public-edge/cloudflared/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-metrics
  labels:
    app: cloudflared
spec:
  selector:
    app: cloudflared
  ports:
    - name: metrics
      port: 2000
      targetPort: metrics
