apps/litomi/public-edge/cloudflared/networkpolicy-metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared-metrics-ingress
spec:
  podSelector:
    matchLabels:
      app: cloudflared
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 2000
